Fixed the header layout problem

--- a/App/StackExchange.DataExplorer/Content/site.css
+++ b/App/StackExchange.DataExplorer/Content/site.css
@@ -204,7 +204,7 @@ img {
 }
 
 #hlinks-content {
-    float: left;    
+    float: left;
 }
 
 #hlinks a {
@@ -391,7 +391,7 @@ input[type="password"]
 div#title
 {
     display:block;
-    float:left;
+    clear: both;
     text-align:left;
     margin-top: -20px;
 }
